read message bug fixed and token expiry extended
